feat: Webapp installation and removal

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -31,4 +31,6 @@ windowrule = float, class:xl-Informative
 windowrule = size 50% 75%, class:xl-Informative
 windowrule = bordersize 2, class:xl-Informative
 
+windowrulev2 = tile, class:^Brave-browser$
+
 layerrule = noanim, rofi
