--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -39,8 +39,8 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-bind = $mainMod, l, exec, systemctl suspend
-bind = $mainMod ALT, l, exec, wlogout
+bind = $mainMod, l, exec, loginctl lock-session
+bind = $mainMod ALT, l, exec, $HOME/.local/bin/super-menu show_power_menu
 bindd = $mainMod ALT, e, Emoji Picker, exec, $HOME/.local/bin/hyprland-emoji
 bind = $mainMod ALT, left, movewindow, l
 bind = $mainMod ALT, right, movewindow, r
