--- a/hyprpanel/.config/hyprpanel/config.json
+++ b/hyprpanel/.config/hyprpanel/config.json
@@ -2,26 +2,24 @@
   "bar.layouts": {
     "*": {
       "left": [
-        "weather",
         "dashboard",
         "cpu",
         "ram",
-        "network",
-        "media"
+        "netstat",
+        "cava"
       ],
       "middle": [
         "workspaces"
       ],
       "right": [
+        "systray",
         "hypridle",
         "updates",
-        "bluetooth",
         "kbinput",
         "volume",
         "battery",
         "clock",
-        "notifications",
-        "systray"
+        "notifications"
       ]
     }
   },
@@ -81,10 +79,10 @@
   "bar.windowtitle.label": true,
   "bar.windowtitle.class_name": false,
   "bar.windowtitle.truncation": false,
-  "bar.customModules.netstat.dynamicIcon": false,
+  "bar.customModules.netstat.dynamicIcon": true,
   "theme.bar.buttons.modules.kbLayout.enableBorder": false,
   "theme.bar.buttons.modules.power.enableBorder": false,
-  "bar.customModules.netstat.labelType": "full",
+  "bar.customModules.netstat.labelType": "in",
   "menus.clock.weather.key": "/home/stef/.config/hyprpanel/weather-api-key.json",
   "menus.clock.time.hideSeconds": false,
   "bar.clock.format": "%k:%M",
@@ -107,5 +105,23 @@
   "menus.dashboard.shortcuts.right.shortcut1.command": "sleep 0.5 && hyprpicker -a",
   "menus.dashboard.shortcuts.right.shortcut1.tooltip": "Color Picker",
   "menus.dashboard.shortcuts.right.shortcut3.icon": "󰄀",
-  "menus.dashboard.shortcuts.right.shortcut3.tooltip": "Screenshot"
+  "menus.dashboard.shortcuts.right.shortcut3.tooltip": "Screenshot",
+  "bar.customModules.netstat.leftClick": "menu:network",
+  "bar.customModules.cava.leftClick": "menu:media",
+  "bar.customModules.cpu.leftClick": "gnome-system-monitor",
+  "bar.customModules.cpu.rightClick": "resources",
+  "bar.customModules.netstat.rateUnit": "MiB",
+  "bar.customModules.updates.autoHide": true,
+  "bar.customModules.updates.pollingInterval": 1440000,
+  "terminal": "alacritty",
+  "bar.customModules.updates.leftClick": "alacritty --class Informative \"yay -Syu --noconfirm\"",
+  "bar.customModules.ram.rightClick": "resources",
+  "bar.customModules.ram.leftClick": "gnome-system-monitor",
+  "bar.customModules.ram.pollingInterval": 2000,
+  "bar.customModules.ram.labelType": "percentage",
+  "bar.customModules.weather.unit": "metric",
+  "bar.customModules.hypridle.label": false,
+  "theme.bar.buttons.modules.worldclock.enableBorder": false,
+  "bar.customModules.worldclock.leftClick": "menu:calendar",
+  "bar.customModules.cava.rightClick": ""
 }
