--- a/hyprland/.config/hypr/conf/layout.conf
+++ b/hyprland/.config/hypr/conf/layout.conf
@@ -1,4 +1,4 @@
 
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
-exec-once = [workspace special:term silent] obsidian
+exec-once = [workspace special silent] obsidian
