feat: set `cnf` to not have a final newline

--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -62,3 +62,10 @@ max_line_length = 9999
 
 [Dockerfile]
 indent_size = 2
+
+[*.cnf]
+indent_style = space
+indent_size = 2
+# Don't wrap..
+max_line_length = 9999
+insert_final_newline = false
