feat(super-menu): More stuff in the super menu

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -24,12 +24,8 @@ layerrule = ignorealpha, swaync-notification-window
 windowrule = float, class:vlc
 
 windowrule = float, class:Informative
-windowrule = size 50% 75%, class:Informative
+windowrule = size 75% 90%%, class:Informative
 windowrule = bordersize 2, class:Informative
-
-windowrule = float, class:xl-Informative
-windowrule = size 75% 75%, class:xl-Informative
-windowrule = bordersize 2, class:xl-Informative
 
 windowrulev2 = tile, class:^Brave-browser$
 
