feat: Add bluetooth

--- a/hyprpanel/.config/hyprpanel/config.json
+++ b/hyprpanel/.config/hyprpanel/config.json
@@ -6,6 +6,7 @@
                 "cpu",
                 "ram",
                 "network",
+                "bluetooth",
                 "cava"
             ],
             "middle": [
