feat: obsidian and slack for workspaces

--- a/hyprland/.config/hypr/conf/layout.conf
+++ b/hyprland/.config/hypr/conf/layout.conf
@@ -1,3 +1,5 @@
 
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] obsidian
+exec-once = [workspace 4 silent] slack
