--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -5,9 +5,10 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# None - focus shift/control
 # SHIFT - Move actions
 # ALT - Alternative actions
-# CTRL - Open/execute actions
+# CTRL - Submaps/Open Programs
 
 # Commands and stuff
 bind = $mainMod, return, exec, $terminal 
@@ -90,8 +91,9 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+# Brightness keys don't work
+bind = $mainMod, F6, exec, brightnessctl -s set 5%+
+bind = $mainMod, F5, exec, brightnessctl -s set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
