--- a/hyprpanel/.config/hyprpanel/config.json
+++ b/hyprpanel/.config/hyprpanel/config.json
@@ -7,7 +7,8 @@
                 "ram",
                 "network",
                 "bluetooth",
-                "cava"
+                "cava",
+                "submap"
             ],
             "middle": [
                 "workspaces"
