--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -3,7 +3,7 @@
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER # Sets "Super" key as main modifier
 
 # None - focus shift/control
 # SHIFT - Move actions
@@ -42,6 +42,7 @@ bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, l, exec, loginctl lock-session
 bind = $mainMod ALT, l, exec, $HOME/.local/bin/super-menu show_power_menu
+bind = $mainMod ALT, s, exec, $HOME/.local/bin/super-menu show_screenshot_menu
 bindd = $mainMod ALT, e, Emoji Picker, exec, $HOME/.local/bin/hyprland-emoji
 bind = $mainMod ALT, left, movewindow, l
 bind = $mainMod ALT, right, movewindow, r
