feat: Floating waypaper

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -22,6 +22,7 @@ layerrule = ignorealpha, swaync-control-center
 layerrule = ignorealpha, swaync-notification-window
 
 windowrule = float, class:vlc
+windowrule = float, class:waypaper
 
 windowrule = float, class:Informative
 windowrule = size 75% 90%%, class:Informative
