--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -15,6 +15,7 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, Escape, exit,
 bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
+bind = $mainMod, W, exec, hyprworm
 bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, TAB, exec, $HOME/.local/bin/super-menu
