--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/aishot-1285.jpg
+wallpaper = ~/Wallpapers/wallpapers/Sun-Setting-Horizon.png
 show_path_in_tooltip = True
 backend = swww
 fill = stretch
