--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -40,6 +40,11 @@ indent_size = 4
 indent_style = tab
 indent_size = 4
 
+[*.go]
+indent_style = tab
+indent_size = 4
+max_line_length=140
+
 [*.lua]
 indent_style = tab
 indent_size = 4
