feat: Disable update notifications

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,6 +44,10 @@ env = HYPRCURSOR_SIZE,24
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
+ecosystem {
+    no_update_news = true
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
