--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/Sun-Setting-Horizon.png
+wallpaper = ~/Wallpapers/wallpapers/aishot-933.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = stretch
@@ -23,4 +23,5 @@ mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
 zen_mode = False
+stylesheet = ~/.config/waypaper/style.css
 
