--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -6,7 +6,8 @@
 # Or execute your favorite apps at launch like this:
 
 exec-once = hypridle
-exec-once = hyprpanel
+exec-once = waybar & swaync
+# exec-once = hyprpanel
 # exec-once = waycorner
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
