--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -32,24 +32,21 @@
         "separate-outputs": true
     },
     "hyprland/workspaces": {
-        "format": "{icon}",
-        "on-click": "activate",
-        "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "6": "",
-            "7": "",
-            "8": "",
-            "9": "",
-            "active": "",
-            "urgent": "",
-            "persistent": "",
-            "focused": "",
-            "default": "",
-        },
+      "on-click": "activate",
+      "format": "{icon}",
+      "format-icons": {
+        "default": "",
+        "1": "1",
+        "2": "2",
+        "3": "3",
+        "4": "4",
+        "5": "5",
+        "6": "6",
+        "7": "7",
+        "8": "8",
+        "9": "9",
+        "active": "󱓻"
+      },
         "sort-by-number": true,
         "persistent-workspaces": {
             "*": 9,
