feat: single_window_aspect_ratio set so single windows are centered, also smart_split
This needs to be tested on my laptop but I am too lazy now!

I LOVE smart_split tho! It's what I've been looking for with my ultrawide monitor

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -68,6 +68,11 @@ general {
     layout = dwindle
 }
 
+dwindle {
+    smart_split = true
+    single_window_aspect_ratio = 4 2
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
