--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "nvim/.config/nvim"]
 	path = nvim/.config/nvim
-	url = https://github.com/Michaelpalacce/nvim.git
+    url = https://github.com/Michaelpalacce/nvim.git
+    branch = main
