feat!: Replace `sway` with `dunst`
Honestly, I am not a frontedn dev, but sway is just UGLY

--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -6,7 +6,7 @@
 # Or execute your favorite apps at launch like this:
 
 exec-once = hypridle
-exec-once = waybar & swaync
+exec-once = waybar
 exec-once = waycorner
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
