--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -172,10 +172,10 @@
         "dnd-inhibited-none": ""
       },
       "return-type": "json",
-      "exec-if": "which swaync-client",
-      "exec": "swaync-client -swb",
-      "on-click": "swaync-client -t -sw",
-      "on-click-right": "swaync-client -d -sw",
+      // "exec-if": "which swaync-client",
+      // "exec": "swaync-client -swb",
+      // "on-click": "swaync-client -t -sw",
+      // "on-click-right": "swaync-client -d -sw",
       "escape": true
     },
     "power-profiles-daemon": {
