--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -89,19 +89,17 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-# Brightness keys don't work
-bind = $mainMod, F6, exec, brightnessctl -s set 5%+
-bind = $mainMod, F5, exec, brightnessctl -s set 5%-
+bindel = , XF86AudioRaiseVolume , exec, ~/.config/hypr/scripts/dunst_ultimate.sh volume_up
+bindel = , XF86AudioLowerVolume , exec,  ~/.config/hypr/scripts/dunst_ultimate.sh volume_down
+bindel = , XF86AudioMute        , exec,  ~/.config/hypr/scripts/dunst_ultimate.sh volume_mute
+bindl = , XF86AudioNext , exec,   ~/.config/hypr/scripts/dunst_ultimate.sh next_track
+bindl = , XF86AudioPause, exec,  ~/.config/hypr/scripts/dunst_ultimate.sh play_pause
+bindl = , XF86AudioPlay , exec,   ~/.config/hypr/scripts/dunst_ultimate.sh play_pause
+bindl = , XF86AudioPrev , exec,   ~/.config/hypr/scripts/dunst_ultimate.sh prev_track
 
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+# Brightness keys don't work
+bind = $mainMod, F6, exec,  ~/.config/hypr/scripts/dunst_ultimate.sh brightness_up
+bind = $mainMod, F5, exec,  ~/.config/hypr/scripts/dunst_ultimate.sh brightness_down
 
 bind = , PRINT, exec, hyprshot -m region
 bind = ALT, PRINT, exec, hyprshot -m output
