feat!: New `rofi` config
Stolen from: https://github.com/Craacky/catppuccin-mocha-dots?tab=readme-ov-file

Added clipboard manager, better powermenu and nicer style overall.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ $terminal = alacritty
 $fileManager = nautilus
 $menu = rofi -show drun
 $browser = brave
+$clipboard = ~/.config/rofi/scripts/clipboard.sh
 
 source = ~/.config/hypr/conf/layout.conf
 source = ~/.config/hypr/conf/autostart.conf
