--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -41,8 +41,10 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+
+bind = $mainMod ALT, V, exec, cliphist list | $clipboard| cliphist decode | wl-copy
 bind = $mainMod, l, exec, loginctl lock-session
-bind = $mainMod ALT, l, exec, $HOME/.local/bin/super-menu show_power_menu
+bind = $mainMod ALT, l, exec, $HOME/.config/rofi/scripts/powermenu.sh
 bind = $mainMod ALT, s, exec, $HOME/.local/bin/super-menu show_screenshot_menu
 bindd = $mainMod ALT, e, Emoji Picker, exec, $HOME/.local/bin/hyprland-emoji
 bind = $mainMod ALT, left, movewindow, l
