--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -5,11 +5,12 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = hypridle
-exec-once = waybar
-exec-once = waycorner
+exec-once = hypridle # idle daemon
+exec-once = waybar # Top bar
+exec-once = waycorner # Hoy corners
+exec-once = dunst # Notifications
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = systemctl --user start hyprpolkitagent # no clue Ref: https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 # exec-once = hyprpm reload -n # Load all enabled and installed plugins
