feat: Add `eww` for a littel center

--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -8,6 +8,7 @@
 exec-once = hypridle # idle daemon
 exec-once = waybar # Top bar
 exec-once = waycorner # Hoy corners
+exec-once = eww daemon &
 exec-once = dunst # Notifications
 exec-once = swww-daemon & swww restore # Restores wallpaper
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
