--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -55,7 +55,7 @@
     "clock": {
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format": "<span color='#89b4fa'>󰥔 </span><span color='#cdd6f4'>{:%H:%M | %a %d %b}</span>",
-        "format-alt": "{:%H:%M}"
+        "on-click": "eww open central --toggle"
     },
     "cpu": {
         "format": "<span color='#89b4fa'>󰍛</span> <span color='#cdd6f4'>{usage}%</span>",
@@ -157,26 +157,6 @@
         "tooltip": true,
         "tooltip-format": "{capacity}% - {time}",
         "on-click": "2"
-    },
-    "custom/notification": {
-      "tooltip": false,
-      "format": "{icon}",
-      "format-icons": {
-        "notification": "<span foreground='red'><sup></sup></span>",
-        "none": "",
-        "dnd-notification": "<span foreground='red'><sup></sup></span>",
-        "dnd-none": "",
-        "inhibited-notification": "<span foreground='red'><sup></sup></span>",
-        "inhibited-none": "",
-        "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
-        "dnd-inhibited-none": ""
-      },
-      "return-type": "json",
-      // "exec-if": "which swaync-client",
-      // "exec": "swaync-client -swb",
-      // "on-click": "swaync-client -t -sw",
-      // "on-click-right": "swaync-client -d -sw",
-      "escape": true
     },
     "power-profiles-daemon": {
       "format": "{icon}",
