feat: Updates have a tooltip now to show what is being updated.
Also moved some modules around

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -18,16 +18,17 @@
         "network"
     ],
     "modules-center": [
-        "hyprland/workspaces"
+        "hyprland/workspaces",
+        "custom/updates",
     ],
     "modules-right": [
         "tray",
         "idle_inhibitor",
         "hyprland/language",
-        "power-profiles-daemon",
-        "custom/updates",
         "battery",
+        "power-profiles-daemon",
         "pulseaudio",
+        "pulseaudio/microphone",
         "clock",
     ],
 }
