--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -32,6 +32,7 @@
 
         // ISLAND
         "idle_inhibitor",
+        "bluetooth",
         "custom/gpu-recorder",
         "hyprland/language",
         "battery",
