feat: Better keymaps for clipboard and stuff

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -7,7 +7,7 @@ $mainMod = SUPER # Sets "Super" key as main modifier
 
 # None - focus shift/control
 # SHIFT - Move actions
-# ALT - Alternative actions
+# ALT - Alternative actions, without SUPER
 # CTRL - Submaps/Open Programs
 
 # Commands and stuff
@@ -42,15 +42,11 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 
-bind = $mainMod ALT, V, exec, cliphist list | $clipboard| cliphist decode | wl-copy
 bind = $mainMod, l, exec, loginctl lock-session
-bind = $mainMod ALT, l, exec, $HOME/.config/rofi/scripts/powermenu.sh
-bind = $mainMod ALT, s, exec, $HOME/.local/bin/super-menu show_screenshot_menu
-bindd = $mainMod ALT, e, Emoji Picker, exec, $HOME/.local/bin/hyprland-emoji
-bind = $mainMod ALT, left, movewindow, l
-bind = $mainMod ALT, right, movewindow, r
-bind = $mainMod ALT, up, movewindow, u
-bind = $mainMod ALT, down, movewindow, d
+bind = ALT, l, exec, $HOME/.config/rofi/scripts/powermenu.sh
+bind = ALT, v, exec, cliphist list | $clipboard| cliphist decode | wl-copy
+bind = ALT, s, exec, $HOME/.local/bin/super-menu show_screenshot_menu
+bindd = ALT, e, Emoji Picker, exec, $HOME/.local/bin/hyprland-emoji
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -75,9 +71,11 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-# Scroll through existing workspaces with mainMod + SHIFT + left-right
-bind = $mainMod SHIFT, right, workspace, e+1
-bind = $mainMod SHIFT, left, workspace, e-1
+# Move active windows within a workspace
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
