feat: `hyprbars` only shown when floating

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -14,8 +14,10 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# Floating apps
 windowrule = float, class:vlc
 windowrule = float, class:waypaper
+# Floating apps
 
 windowrule = float, class:Informative
 windowrule = size 75% 90%%, class:Informative
@@ -23,4 +25,8 @@ windowrule = bordersize 2, class:Informative
 
 windowrulev2 = tile, class:^Brave-browser$
 
+# No animations for `rofi`
 layerrule = noanim, rofi
+
+# show hyprbars only on floating
+windowrulev2 = plugin:hyprbars:nobar, floating:0
