--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -30,3 +30,11 @@ layerrule = noanim, rofi
 
 # show hyprbars only on floating
 windowrulev2 = plugin:hyprbars:nobar, floating:0
+
+# Smart gaps and borders (no borders when only 1 window open)
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
