--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -99,6 +99,14 @@ decoration {
     }
 }
 
+$fastest = 1.2
+$veryFast = 1.5
+$fast = 2
+$normal = 3
+$normalSlow = 4
+$slow = 5
+$verySlow = 10
+
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
@@ -111,23 +119,23 @@ animations {
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
 
-    animation = global, 1, 10, default
-    animation = borderangle, 1, 10, quick
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = global, 1, $verySlow, default
+    animation = borderangle, 1, $verySlow, quick
+    animation = border, 1, $slow, easeOutQuint
+    animation = windows, 1, $slow, easeOutQuint
+    animation = windowsIn, 1, $normalSlow, easeOutQuint, popin 87%
+    animation = windowsOut, 1, $veryFast, linear, popin 87%
+    animation = fadeIn, 1, $veryFast, almostLinear
+    animation = fadeOut, 1, $veryFast, almostLinear
+    animation = fade, 1, $normal, quick
+    animation = layers, 1, $normalSlow, easeOutQuint
+    animation = layersIn, 1, $normalSlow, easeOutQuint, fade
+    animation = layersOut, 1, $veryFast, linear, fade
+    animation = fadeLayersIn, 1, $fastest, almostLinear
+    animation = fadeLayersOut, 1, $veryFast, almostLinear
+    animation = workspaces, 1, $fast, almostLinear, fade
+    animation = workspacesIn, 1, $fastest, almostLinear, fade
+    animation = workspacesOut, 1, $fast, almostLinear, fade
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
