feat: Remapped `caps lock` to `esc`

--- a/hyprland/.config/hypr/conf/input.conf
+++ b/hyprland/.config/hypr/conf/input.conf
@@ -24,8 +24,10 @@ input {
     # keyboard reeat delay
     repeat_delay = 300
     repeat_rate = 50
-}
 
+# ESC when pressing `caps lock`
+    kb_options = caps:escape
+}
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe_invert = false
