--- a/hyprland/.config/hypr/conf/input.conf
+++ b/hyprland/.config/hypr/conf/input.conf
@@ -6,7 +6,8 @@
 input {
     kb_layout = us,bg
     kb_variant = ,phonetic
-    kb_options = grp:alt_shift_toggle
+    # ESC when pressing `caps lock`, toggle languages with alt-shift
+    kb_options = grp:alt_shift_toggle, caps:escape
     kb_model =
     kb_rules =
 
@@ -25,8 +26,6 @@ input {
     repeat_delay = 300
     repeat_rate = 50
 
-# ESC when pressing `caps lock`
-    kb_options = caps:escape
 }
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
