feat: Smart tile is not so smart.... always goes ontop

--- a/hyprland/.config/hypr/conf/submaps.conf
+++ b/hyprland/.config/hypr/conf/submaps.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 # Switch to a submap called `resize`.
-bind = $mainMod CTRL, r, submap, resize
+bind = ALT, r, submap, resize
 
 # Start a submap called "resize".
 submap = resize
