feat: smart_split is now enabled only for mouse

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -88,6 +88,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Smart_split only with mouse, this requires preserve_split = true
+bind = $mainMod, mouse:272, exec, hyprctl keyword dwindle:smart_split 1
+bindr = $mainMod, mouse:272, exec, hyprctl keyword dwindle:smart_split 0
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = , XF86AudioRaiseVolume , exec, ~/.config/hypr/scripts/dunst_ultimate.sh volume_up
 bindel = , XF86AudioLowerVolume , exec,  ~/.config/hypr/scripts/dunst_ultimate.sh volume_down
