feat: Add `wayscriber`
Also changed rustup for rust for now

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -17,6 +17,7 @@ bind = $mainMod, Escape, exit,
 bind = $mainMod, V, exec, ~/.config/hypr/scripts/better_floating.sh
 bind = $mainMod, W, exec, hyprworm
 bind = $mainMod, C, exec, hyprctl --batch "dispatch resizeactive exact 50% 95%; dispatch moveactive 0 5%; dispatch centerwindow 1"
+bind = $mainMod, D, exec, wayscriber --active
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, TAB, exec, $HOME/.local/bin/super-menu
 bind = $mainMod, F, fullscreen,
