feat: Floating utils

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -17,6 +17,14 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 # Floating apps
 windowrule = float, class:vlc
 windowrule = float, class:waypaper
+windowrule = float, class:blueman-manager
+windowrule = size 1000px 75%, class:blueman-manager
+windowrule = move 80% 10%, class:blueman-manager
+
+windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = size 1000px 75%, class:org.pulseaudio.pavucontrol
+windowrule = move 80% 10%, class:org.pulseaudio.pavucontrol
+
 # Floating apps
 
 windowrule = float, class:Informative
@@ -38,3 +46,4 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
