feat: Ask before update
I need to get in the habit of checking packages

--- a/waybar/.config/waybar/modules.jsonc
+++ b/waybar/.config/waybar/modules.jsonc
@@ -130,7 +130,7 @@
         "exec": "~/.config/waybar/scripts/updates.sh",
         "exec-if": "bash -c '[[ $(checkupdates | wc -l) -gt 0 ]]'", // Only show if there are updates
         "interval": 120,
-        "on-click": "alacritty -e yay --noconfirm -Syu && notify-send 'The system has been updated' ",
+        "on-click": "alacritty -e yay -Syu && notify-send 'The system has been updated' ",
     },
     "custom/weather": {
         "format": "{}",
