--- a/hyprland/.config/hypr/conf/autostart.conf
+++ b/hyprland/.config/hypr/conf/autostart.conf
@@ -15,3 +15,4 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systemctl --user start hyprpolkitagent # no clue Ref: https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = hyprpm reload -n # Load all enabled and installed plugins
+exec-once = syncthing
