feat: Added binds to move with extra mouse keys

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -88,6 +88,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = ,mouse:276,movewindow
+bindm = ,mouse:275,resizewindow
 
 # Smart_split only with mouse, this requires preserve_split = true
 bind = $mainMod, mouse:272, exec, hyprctl keyword dwindle:smart_split 1
