feat: Tmux navigation vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,9 +45,8 @@ set -g status-position bottom
 set -g @catppuccin_status_modules_right "none"
 
 # Config
-setw -g mode-keys vi                    # vi keys to navigate panes
 set -g renumber-windows on              # renumber all windows when any window is closed
-set -g history-limit 10000            # increase history size (from 2,000)
+set -g history-limit 100000             # increase history size (from 2,000)
 set-option -g detach-on-destroy off     # Don't detach on destroy
 # No way fuck this, I want my scrollwheel and to copy with mouse.
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -56,3 +55,9 @@ set -g @yank_selection_mouse 'clipboard'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+setw -g mode-keys vi                    # vi keys to navigate panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
