--- a/hyprland/.config/hypr/conf/input.conf
+++ b/hyprland/.config/hypr/conf/input.conf
@@ -15,6 +15,8 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
+    scroll_factor = 1.5
+
     touchpad {
         natural_scroll = false
         scroll_factor = 0.4
