feat: Added a slack quiicklaunch shortcut, changed steam's

--- a/hyprland/.config/hypr/conf/keymaps.conf
+++ b/hyprland/.config/hypr/conf/keymaps.conf
@@ -32,7 +32,8 @@ bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 # Open apps and tuis with mainMod and ctrl
 bind = $mainMod CTRL, B, exec, $browser
 bind = $mainMod CTRL, O, exec, obsidian
-bind = $mainMod CTRL, S, exec, steam
+bind = $mainMod CTRL, G, exec, steam
+bind = $mainMod CTRL, S, exec, slack
 bind = $mainMod CTRL, D, exec, discord
 bind = $mainMod CTRL, E, exec, $fileManager
 
