feat: Added plugin to save and restore tmux sessions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ bind-key C-s send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Theme
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato, mocha
@@ -24,7 +25,6 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
 bind-key "i" new "tmx-pkg"
-bind-key -r b break-pane -d                                         # Break pane to new window
 
 bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
 set-option -g repeat-time 0                                         # Repeat time where we can chain commands... I don't like this outside of mass resizing...
