feat: New wallpaper

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/wp4473721-5120x1440-wallpapers.png
+wallpaper = ~/Wallpapers/wallpapers/aishot-3321.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = stretch
@@ -22,6 +22,6 @@ swww_transition_fps = 60
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
-zen_mode = False
+zen_mode = True
 stylesheet = ~/.config/waypaper/style.css
 
