feat(tmux): Added some modules to status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,9 +8,30 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin "tony-sol/tmux-kubectx"
 
+###########################################################################3
 # Theme
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato, mocha
+set -g @catppuccin_window_status_style "rounded"
+# TMUX status bar
+set -g status-position bottom
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+
+set -g @catppuccin_kube_context_color "#{@thm_red}"
+set -g @catppuccin_kube_namespace_color "#{@thm_sky}"
+set -agF status-right "#{E:@catppuccin_status_kube}"
+###########################################################################3
 
 
 # make colors inside tmux look the same as outside of tmux
@@ -24,7 +45,6 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
-bind-key "i" new "tmx-pkg"
 
 bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
 set-option -g repeat-time 0                                         # Repeat time where we can chain commands... I don't like this outside of mass resizing...
@@ -40,9 +60,6 @@ bind-key -r -T prefix       M-Down            resize-pane -D
 bind-key -r -T prefix       M-Left            resize-pane -L
 bind-key -r -T prefix       M-Right           resize-pane -R
 
-# TMUX status bar
-set -g status-position bottom
-set -g @catppuccin_status_modules_right "none"
 
 # Config
 set -g renumber-windows on              # renumber all windows when any window is closed
